3.aug (ws)
      - new context menu for palettes: new function: revert to
        factory settings
29.jul (ws)
      - added google-diff-match-patch library to build
      - implemented basic functionality for linked parts
24.jul (ws)
      - replace buildin DejaVu fonts with FSF freefont
      - new: import of GuitarPro *.gtp *.gp3 *.gp4 *.gp5 files
13.jul (ws)
      - implement playback of hairpins (crescendo/decrescendo)
12.jul (ws)
      - fix #6453: File containing a horizontal frame directly before a bar with a line break cannot be opened
        (la)
      - fix ove charset preferences init (patch by Van Ferry)
10.jul (la)
      - fix : adding notes on voice > 0 from plugin framework
9.jul (ws)
      - play whole chord if note is added
      - new image property: auto scale to fill parent frame
      - new function: add image to frames (from context menu)
7.jul (ws)
      - gonville font integration
6.jul (ws)
      - applied patch from Miwarre: Show/hide courtesy time signature
        and clefs for individual elements
5.jul  (la)
      - fix #6388: Crash on importing a MusicXML file (beam problem)
2.jul (ws)
      - instead of saving the _userOff value, the actual screen position
        of movable elements is saved.
      (la)
      - fix #6335: Crash on creating triplet on a chord
1.jul (ws)
      - add patch from Miwarre: Hide/show naturals and courtesy keys
        for individual key sigs
      (la)
      - fix #6318: MusicXML export of syllabic is broken
      - Add message if unknown extension + no empty tab
29.jun (la)
      - fix #6264: Chordnames not transposed on copy-paste or concert pitch
      - fix #6283: R key does not work as expected in drum staff
28.jun (ws)
      - applied page offset patch from Miwarre
27.jun (ws)
      - more refactoring of spanner & slur elements eleminating
        element->tick
      (la)
      - fix #6254: Concert pitch lossy transposition (Patch by Aaron Epstein)