@@ -123,6 +123,7 @@ void Seq::setScoreView(ScoreView* v)
       {
       if (cv !=v && cs) {
             disconnect(cs, SIGNAL(selectionChanged(int)), this, SLOT(selectionChanged(int)));
+            markedNotes.clear();
             stop();
             cs = v ? v->score() : 0;
 #ifndef __MINGW32__
